fix bug parser str datetime from browser to server
