# unvs/internal/app/handler/oauth/token.go
@@ -2,39 +2,17 @@ package oauth
 
 import (
 	"context"
+	"log"
 	"net/http"
 	"strings"
 	"unvs/internal/config"
 
+	"caching"
 	"dbx"
 	"dynacall"
 
 	"github.com/labstack/echo/v4"
 )
-
-func createCfg() *dbx.Cfg {
-	return &dbx.Cfg{
-		Driver:   "mssql",
-		Host:     "localhost",
-		Port:     0,
-		User:     "sa",
-		Password: "123456",
-		SSL:      false,
-	}
-}
-func createDbx() *dbx.DBX {
-	ret := dbx.NewDBX(*createCfg())
-	return ret
-}
-func createTenantDbx(tenant string) *dbx.DBXTenant {
-	db := createDbx()
-	r, e := db.GetTenant(tenant)
-	if e != nil {
-		panic(e)
-	}
-	db.Open()
-	return r
-}
 
 // LoginByFormSubmit xử lý yêu cầu HTTP POST để đăng nhập người dùng chỉ bằng form data.
 // @Summary Đăng nhập người dùng bằng Form Submit (Username/Password)
@@ -46,10 +24,7 @@ func createTenantDbx(tenant string) *dbx.DBXTenant {
 // @Param username formData string true "Tên người dùng (không phải email)"
 // @Param password formData string true "Mật khẩu"
 // @Param grant_type formData string false "Kiểu cấp quyền (thường là 'password' cho OAuth2, tùy chọn)"
-// @Success 200 {object} OAuth2TokenResponse "Đăng nhập thành công, trả về JWT token"
-// @Failure 400 {object} ErrorResponse "Yêu cầu không hợp lệ (validation errors)"
-// @Failure 401 {object} ErrorResponse "Thông tin đăng nhập không hợp lệ"
-// @Failure 500 {object} ErrorResponse "Lỗi nội bộ server"
+
 // @Router /oauth/token [post]
 func (h *OAuthHandler) Token(c echo.Context) error {
 	username := c.FormValue("username")
@@ -59,7 +34,7 @@ func (h *OAuthHandler) Token(c echo.Context) error {
 			Message: "Username must follow Tenant name",
 		})
 	}
-	tanentName := strings.Split(username, "@")[1]
+	tenantName := strings.Split(username, "@")[1]
 	username = strings.Split(username, "@")[0]
 
 	password := c.FormValue("password")
@@ -74,17 +49,26 @@ func (h *OAuthHandler) Token(c echo.Context) error {
 	}
 	callPath := "login@unvs.br.auth.users"
 	postData := []interface{}{username, password}
-
+	dbTenant, err := config.CreateTenantDbx(tenantName)
+	if err != nil {
+		log.Fatal(err)
+		return c.JSON(http.StatusInternalServerError, ErrorResponse{
+			Code:    "INTERNAL_SERVER_ERROR",
+			Message: "Internal server error",
+		})
+	}
 	ret, err := dynacall.Call(callPath, postData, struct {
 		Tenant    string
 		TenantDb  *dbx.DBXTenant
 		Context   context.Context
 		JwtSecret []byte
+		Cache     caching.Cache
 	}{
-		Tenant:    "testDb",
-		TenantDb:  createTenantDbx(tanentName),
-		Context:   context.Background(),
+		Tenant:    tenantName,
 		JwtSecret: config.GetJWTSecret(),
+		Cache:     config.GetCache(),
+		Context:   context.Background(),
+		TenantDb:  dbTenant,
 	})
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, ErrorResponse{
